--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "dayjs": "^1.11.13",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-date-range": "^2.0.1",
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
