--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.16.0",
-    "@mui/x-date-pickers": "^7.15.0",
+    "@mui/x-date-pickers": "^7.16.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "next": "14.2.6",
     "react": "^18",
