--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/material-nextjs": "^6.1.1",
     "@mui/x-data-grid": "^7.16.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
+    "@toolpad/core": "^0.7.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
-    "next": "14.2.6",
-    "react": "^18",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-date-range": "^2.0.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
+    "eslint-config-next": "^14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
