--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-calendar": "^5.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "eslint": "^8",
