--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@toolpad/core": "^0.7.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
