--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,52 +1,28 @@
 {
-  "name": "Immunify",
-  "short_name": "Immunify",
-  "theme_color": "#0e6b58",
-  "background_color": "#fff",
-  "display": "standalone",
-  "orientation": "",
-  "scope": "/",
-  "start_url": "/",
+  "theme_color": "#ffffff",
+  "background_color": "#2EC6FE",
   "icons": [
     {
-      "src": "/images/icons/icon-72x72.png",
-      "sizes": "72x60",
+      "purpose": "maskable",
+      "sizes": "512x512",
+      "src": "icon512_maskable.png",
       "type": "image/png"
     },
     {
-      "src": "/images/icons/icon-96x96.png",
-      "sizes": "96x81",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icons/icon-128x128.png",
-      "sizes": "128x107",
-      "type": "image/png"
-    },
-    {
-     "src": "images/icons/icon-144x144.png",
-     "sizes": "144x121",
-     "type": "image/png"
-    },
-    {
-      "src": "/images/icons/icon-152x152.png",
-      "sizes": "152x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icons/icon-192x192.png",
-      "sizes": "192x161",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icons/icon-384x384.png",
-      "sizes": "384x322",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icons/icon-512x512.png",
-      "sizes": "512x430",
+      "purpose": "any",
+      "sizes": "512x512",
+      "src": "icon512_rounded.png",
       "type": "image/png"
     }
-  ]
+  ],
+  "orientation": "any",
+  "display": "standalone",
+  "dir": "auto",
+  "lang": "en-US",
+  "name": "Immunify",
+  "short_name": "Immunify",
+  "description": "Monitoring Baby Immunization",
+  "start_url": "/",
+  "scope": "/",
+  "id": "1"
 }
