--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
