--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@vercel/speed-insights": "^1.0.14",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
