--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,6 @@
     "@vercel/speed-insights": "^1.0.14",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
@@ -37,7 +36,6 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.13.0",
-    "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
@@ -46,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "^14.2.14",
     "postcss": "^8",
+    "supabase": "^1.223.10",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.95.0"
   }
