--- a/frontend/.github/workflows/vaccination-reminder.yml
+++ b/frontend/.github/workflows/vaccination-reminder.yml
@@ -2,7 +2,7 @@ name: Schedule Email Reminders
 
 on:
   schedule:
-    - cron: "0 8 * * *" # Run daily at 8:00 AM UTC
+    - cron: "0 /5 * * *" # Run daily at 8:00 AM UTC
 
 jobs:
   send-emails:
