--- a/.github/workflows/vaccination-reminder.yml
+++ b/.github/workflows/vaccination-reminder.yml
@@ -3,12 +3,14 @@ name: Send Reminder Emails
 on:
   schedule:
     - cron: "5 0 * * *"  # Runs daily at 00:05 UTC
-  # Optional: Add manual trigger for testing
   workflow_dispatch:
 
 jobs:
   send-emails:
     runs-on: ubuntu-latest
+    env:
+      RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+      NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}  # Your deployed app URL
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -21,9 +23,15 @@ jobs:
       - name: Install Dependencies
         run: npm install
         
-      - name: Trigger Email API
-        env:
-          API_URL: ${{ secrets.RESEND_API_KEY }}  # Add this to your repo secrets
+      - name: Debug Info (Masked)
         run: |
-          curl -X POST $API_URL/api/send-emails \
+          echo "Using APP URL: $NEXT_PUBLIC_APP_URL" | sed 's/[[:alnum:]]/<hidden>/g'
+          echo "Resend API Key is set: ${{ secrets.RESEND_API_KEY != '' }}"
+        
+      - name: Trigger Email API
+        run: |
+          curl --fail -X POST "${NEXT_PUBLIC_APP_URL}/api/send-emails" \
           -H "Content-Type: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RESEND_API_KEY }}" \
+          -d '{}' \
+          -v
